# connect4

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Dockerfile  Makefile  README.md  dev.py  docker-compose.yml  evals.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
.zed/: settings.json
backend/: agent.py  api.py  c4model.py  db.py  demo_ai_vs_ai.py  game.py  schema.sql  server.py  spider.py
c4ai/: Dockerfile  README.md  biome.json  deno.json  instrumentation.ts  main.ts  package-lock.json  package.json  pnpm-lock.yaml  run.sh  tsconfig.json
c4ai/.zed/: settings.json
connect4/: agent.py  server.py
frontend/: CLAUDE.md  index.html  package.json  vite.config.ts
frontend/src/: AivsAiPlay.tsx  App.module.css  App.tsx  GameBoard.tsx  GridBackground.module.css  GridBackground.tsx  HomePage.module.css  HomePage.tsx  HumanAIPlay.tsx  Instrumentation.tsx  PlayerSelection.module.css  PlayerSelection.tsx  PlayerSelectionDirectFallback.tsx  SimpleRoute.tsx  ai-service.ts  game-types.ts  game-utils.ts  index.css  index.tsx  layout.module.css  layout.tsx
frontend/src/components/: select.module.css  select.tsx
frontend/src/connect4/: __init__.py
frontend/src/icons/: chevron-down.tsx  pydantic-logo.tsx
src/: App.module.css  App.tsx  GameBoard.tsx  HomePage.tsx  PlayerSelection.tsx  SimpleRoute.tsx  game-types.ts  game-utils.ts
