[project]
name = "backend"
version = "0.1.0"
description = "Connect4 Game"
readme = "README.md"
dependencies = [
    "uvicorn >= 0.34.2",
    "fastapi >= 0.115.12",
    "pydantic >= 2.11.4",
    "pydantic-ai-slim[openai,anthropic,groq,vertexai]>=0.2.3",
    "logfire[fastapi] >= 3.15.1",
]
requires-python = ">=3.12"
authors = [
    { name = "Samuel Colvin", email = "samuel@pydantic.dev" },
    { name = "David Montague", email = "david@pydantic.dev" },
]
license = "MIT"

[dependency-groups]
dev = ["ruff >= 0.8.3", "pyright >= 1.1.397"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportMissingTypeStubs = false
include = ["backend"]
venvPath = "."
venv = ".venv"

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "Q",      # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RUF100", # https://docs.astral.sh/ruff/rules/unused-noqa/
    "C90",    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "DTZ005", # https://docs.astral.sh/ruff/rules/call-datetime-now-without-tzinfo/
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true, known-first-party = ["backend"] }
mccabe = { max-complexity = 14 }
ignore = [
    "D107", # ignore missing docstring in __init__ methods
    "D100", # ignore missing docstring in module
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "C901", # ignore too complex functions, doesn't seem to be worth it
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.uv]
default-groups = ["dev"]
